--- a/next.html
+++ b/next.html
@@ -28,19 +28,18 @@
     <br>There is no better teacher than experience. Build and experiment constantly. Ask yourself, <i>&ldquo;what would happen if I?...&rdquo;</i> or <i>&ldquo;wonder if I could build?...&rdquo;</i> and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. <em>Always challenge yourself.</em></p>
   <h2>Web Design Resources</h2>
   <p><b>HTML related titles</b></p>
-  <p>Web Design related titles</p>
-  <p>HTML specifications </p>
+  <p><b>>Web Design related titles</b></p>
+  <p><b>HTML specifications</b></p>
   <p>Although their format can be a bit hard to read initially, once you&rsquo;re familiar with them there is no better resource for learning HTML and staying current with it than reading the actual W3C specifications.</p>
-  <p>HTML 4.0</p>
-  <p>XHTML 1.0</p>
-  <p>WHATWG HTML5</p>
-  <p>W3C HTML5</p>
-  <p>W3C Markup Validation Service </p>
+  <p><b>HTML 4.0</b></p>
+  <p><b>XHTML 1.0</b></p>
+  <p><b>WHATWG HTML5</b></p>
+  <p><b>W3C HTML5</b></p>
+  <p><b>W3C Markup Validation Service</b></p>
   <p>Great for testing code and making sure you&rsquo;re writing valid HTML syntax.</p>
-  <p>Mozilla Developer Network </p>
+  <p><b>Mozilla Developer Network</b></p>
   <p>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</p>
-  <p>HTML5 Rocks </p>
+  <p><b>HTML5 Rocks</b></p>
   <p>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </p>
-
 </body>
 </html>
