--- a/next.html
+++ b/next.html
@@ -28,7 +28,7 @@
     <br>There is no better teacher than experience. Build and experiment constantly. Ask yourself, <i>&ldquo;what would happen if I?...&rdquo;</i> or <i>&ldquo;wonder if I could build?...&rdquo;</i> and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. <em>Always challenge yourself.</em></p>
   <h2>Web Design Resources</h2>
   <p><b>HTML related titles</b></p>
-  <p><b>>Web Design related titles</b></p>
+  <p><b>Web Design related titles</b></p>
   <p><b>HTML specifications</b></p>
   <p>Although their format can be a bit hard to read initially, once you&rsquo;re familiar with them there is no better resource for learning HTML and staying current with it than reading the actual W3C specifications.</p>
   <p><b>HTML 4.0</b></p>
