--- a/reference.html
+++ b/reference.html
@@ -63,7 +63,7 @@
   </dl>
   <table id="named" border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code.">
     <caption>
-  Common Named Character Entities 
+  <h3>Common Named Character Entities</h3>
     </caption>
     <tr>
       <th scope="col">Character </th>
